fixed slot spacing

--- a/app/games/10/css/main.css
+++ b/app/games/10/css/main.css
@@ -83,8 +83,7 @@ body {
 #game-area #wrapper #status {
     color: #FFF;
     width: 100%;
-    height: 88px;
-    height: 100px;
+    height: 82px;
     font-size: 1.8em;
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=83);
     opacity: 0.83;
@@ -117,7 +116,7 @@ body {
     background-size: cover;
     width: 25px;
     height: 25px;
-    background-image: url("http://10.1.1.100:8888/gfx/user-avatar-1.png");
+    /*background-image: url("http://10.1.1.100:8888/gfx/user-avatar-1.png");*/
     position: absolute;
     left: 0px;
     top: 30px;
@@ -313,7 +312,7 @@ body {
     text-decoration: none;
     position: absolute;
     z-index: 100;
-    top: 670px;
+    top: 650px;
     left: 409px;
 }
 #game-area #wrapper #machine #spin:active {
@@ -326,7 +325,7 @@ body {
     height: 150px;
     position: absolute;
     z-index: 100;
-    top: 670px;
+    top: 650px;
     left: 50px;
     color: #FFF;
     text-transform: uppercase;
@@ -417,7 +416,7 @@ body {
     width: 100%;
     min-height: 124px;
     position: absolute;
-    top: 740px;
+    top: 720px;
     /*margin-top: -52px;
 */    right: 0;
     bottom: 0;
